{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 371,
  "lineage": "2b0dabba-0de4-b6ff-1294-2b97921481ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wjshin_natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1fb46021d555973",
            "domain": "vpc",
            "id": "eipalloc-0e1fb46021d555973",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-34-144.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.34.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wjshin_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066d41d96fc160063",
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:instance/i-0da73365b976edfba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da73365b976edfba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wjshin_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbe9d59fce314843",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-13-124-80-60.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.80.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c960f4841f4a598",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00751e16b03f105ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0565612f706967d8f",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00751e16b03f105ba"
            ]
          },
          "dependencies": [
            "aws_security_group.wjshin_sg",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wjshin_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:internet-gateway/igw-0a146c34ec2c32555",
            "id": "igw-0a146c34ec2c32555",
            "owner_id": "110290971136",
            "tags": {
              "Name": "wjshin-ig"
            },
            "tags_all": {
              "Name": "wjshin-ig"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wjshin_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:loadbalancer/app/wjshin-lb/b75983d1a16df5a1",
            "arn_suffix": "app/wjshin-lb/b75983d1a16df5a1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wjshin-lb-426945810.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:loadbalancer/app/wjshin-lb/b75983d1a16df5a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wjshin-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00751e16b03f105ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0565612f706967d8f"
              },
              {
                "subnet_id": "subnet-0b063da0c7a46ebc2"
              }
            ],
            "subnets": [
              "subnet-0565612f706967d8f",
              "subnet-0b063da0c7a46ebc2"
            ],
            "tags": {
              "Name": "wjshin-lb"
            },
            "tags_all": {
              "Name": "wjshin-lb"
            },
            "vpc_id": "vpc-0963853b4c011362e",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.wjshin_sg",
            "aws_subnet.wjshin_weba",
            "aws_subnet.wjshin_webc",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wjshin_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:listener/app/wjshin-lb/b75983d1a16df5a1/cef57d296bdcb0eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:targetgroup/wjshin-albtg/1685ca6f671746b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:listener/app/wjshin-lb/b75983d1a16df5a1/cef57d296bdcb0eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:loadbalancer/app/wjshin-lb/b75983d1a16df5a1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wjshin_lb",
            "aws_lb_target_group.wjshin_albtg",
            "aws_security_group.wjshin_sg",
            "aws_subnet.wjshin_weba",
            "aws_subnet.wjshin_webc",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wjshin_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:targetgroup/wjshin-albtg/1685ca6f671746b3",
            "arn_suffix": "targetgroup/wjshin-albtg/1685ca6f671746b3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:110290971136:targetgroup/wjshin-albtg/1685ca6f671746b3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wjshin-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wjshin_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1fb46021d555973",
            "connectivity_type": "public",
            "id": "nat-031ae4df4e5a6754e",
            "network_interface_id": "eni-07bb1c25d6c7a914b",
            "private_ip": "10.0.0.146",
            "public_ip": "43.200.34.144",
            "subnet_id": "subnet-0565612f706967d8f",
            "tags": {
              "Name": "wjshin-natgw"
            },
            "tags_all": {
              "Name": "wjshin-natgw"
            }
          },
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wjshin_natgwrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:route-table/rtb-0487a6bf3f166fbac",
            "id": "rtb-0487a6bf3f166fbac",
            "owner_id": "110290971136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-031ae4df4e5a6754e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wjshin-natgwrt"
            },
            "tags_all": {
              "Name": "wjshin-natgwrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_nat_gateway.wjshin_natgw",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wjshin_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:route-table/rtb-06546a937aec61b24",
            "id": "rtb-06546a937aec61b24",
            "owner_id": "110290971136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a146c34ec2c32555",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wjshin-rt"
            },
            "tags_all": {
              "Name": "wjshin-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wjshin_ig",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_natrtas_dba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0435f6b985b5e7378",
            "route_table_id": "rtb-0487a6bf3f166fbac",
            "subnet_id": "subnet-00df95c473ff99845"
          },
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_nat_gateway.wjshin_natgw",
            "aws_route_table.wjshin_natgwrt",
            "aws_subnet.wjshin_dba",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_natrtas_dbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb39091915d13fc",
            "route_table_id": "rtb-0487a6bf3f166fbac",
            "subnet_id": "subnet-0849ac596348f33a4"
          },
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_nat_gateway.wjshin_natgw",
            "aws_route_table.wjshin_natgwrt",
            "aws_subnet.wjshin_dbc",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_natrtas_wasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001fe2e12a4b56890",
            "route_table_id": "rtb-0487a6bf3f166fbac",
            "subnet_id": "subnet-0a0c0ed7659aaaa2c"
          },
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_nat_gateway.wjshin_natgw",
            "aws_route_table.wjshin_natgwrt",
            "aws_subnet.wjshin_wasa",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_natrtas_wasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320ccd9e662a923e",
            "route_table_id": "rtb-0487a6bf3f166fbac",
            "subnet_id": "subnet-041b471a01088867c"
          },
          "dependencies": [
            "aws_eip.wjshin_natip",
            "aws_internet_gateway.wjshin_ig",
            "aws_nat_gateway.wjshin_natgw",
            "aws_route_table.wjshin_natgwrt",
            "aws_subnet.wjshin_wasc",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_rtas_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dae9bbb5e12eaac7",
            "route_table_id": "rtb-06546a937aec61b24",
            "subnet_id": "subnet-0565612f706967d8f"
          },
          "dependencies": [
            "aws_internet_gateway.wjshin_ig",
            "aws_route_table.wjshin_rt",
            "aws_subnet.wjshin_weba",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wjshin_rtas_webc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb40166345f05f3",
            "route_table_id": "rtb-06546a937aec61b24",
            "subnet_id": "subnet-0b063da0c7a46ebc2"
          },
          "dependencies": [
            "aws_internet_gateway.wjshin_ig",
            "aws_route_table.wjshin_rt",
            "aws_subnet.wjshin_webc",
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wjshin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:security-group/sg-00751e16b03f105ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00751e16b03f105ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ftp",
                "from_port": 21,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ftp-data",
                "from_port": 65000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wjshin-se",
            "name_prefix": "",
            "owner_id": "110290971136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wjshin-sg"
            },
            "tags_all": {
              "Name": "wjshin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_dba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-00df95c473ff99845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df95c473ff99845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-dba"
            },
            "tags_all": {
              "Name": "wjshin-dba"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_dbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-0849ac596348f33a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0849ac596348f33a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-dbc"
            },
            "tags_all": {
              "Name": "wjshin-dbc"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_wasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-0a0c0ed7659aaaa2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0c0ed7659aaaa2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-wasa"
            },
            "tags_all": {
              "Name": "wjshin-wasa"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_wasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-041b471a01088867c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041b471a01088867c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-wasc"
            },
            "tags_all": {
              "Name": "wjshin-wasc"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-0565612f706967d8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0565612f706967d8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-weba"
            },
            "tags_all": {
              "Name": "wjshin-weba"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wjshin_webc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:subnet/subnet-0b063da0c7a46ebc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b063da0c7a46ebc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110290971136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wjshin-webc"
            },
            "tags_all": {
              "Name": "wjshin-webc"
            },
            "vpc_id": "vpc-0963853b4c011362e"
          },
          "dependencies": [
            "aws_vpc.wjshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wjshin_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:110290971136:vpc/vpc-0963853b4c011362e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c2cb95bb1d68e39",
            "default_route_table_id": "rtb-0f1c5f7a6ed6840ff",
            "default_security_group_id": "sg-0d9c4d97190b45651",
            "dhcp_options_id": "dopt-0f22863c4d5bd54cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0963853b4c011362e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1c5f7a6ed6840ff",
            "owner_id": "110290971136",
            "tags": {
              "name": "wjshin-vpc"
            },
            "tags_all": {
              "name": "wjshin-vpc"
            }
          }
        }
      ]
    }
  ]
}